force-app/main/default/objects/Procurement_Extension__c/Procurement_Extension__c.object-meta.xml
<CustomObject>
    <description>US547</description>
    <label>Procurement Extension</label>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Procurement Extension ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procurement Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>