force-app/main/default/objects/Procurement_Extension__c/fields/Extension_Comments__c.field-meta.xml
<CustomField>
    <fullName>Extension_Comments__c</fullName>
    <description>US547</description>
    <label>Extension Comments</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>