force-app/main/default/objects/Procurement_Extension__c/fields/Former_Agreed_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Former_Agreed_Award_Date__c</fullName>
    <description>US547</description>
    <label>Former Agreed Award Date</label>
    <type>Date</type>
</CustomField>