force-app/main/default/objects/Procurement_Extension__c/fields/Procurement__c.field-meta.xml
<CustomField>
    <fullName>Procurement__c</fullName>
    <description>US547</description>
    <label>Procurement</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Procurement Extensions</relationshipLabel>
    <relationshipName>Procurement_Extensions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>