force-app/main/default/objects/Procurement_Extension__c/fields/Procurement_Reference__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Reference__c</fullName>
    <formula>Procurement__r.Procurement_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procurement Reference</label>
    <type>Text</type>
</CustomField>