force-app/main/default/objects/Procurement_Extension__c/fields/Reason_for_Extension__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Extension__c</fullName>
    <label>Reason for Extension</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Potential_Bidders_Required_More_Time</fullName>
                <label>Potential Bidders Required More Time</label>
            </value>
            <value>
                <fullName>Evaluation_Period_Extended_Due_to_Number_of_Bids</fullName>
                <label>Evaluation Period Extended Due to Number of Bids</label>
            </value>
            <value>
                <fullName>Challenge_Received</fullName>
                <label>Challenge Received</label>
            </value>
            <value>
                <fullName>Clarification_Period_Extended_Due _to_Volume_of_Clarifications</fullName>
                <label>Clarification Period Extended Due to Volume of Clarifications</label>
            </value>
            <value>
                <fullName>Customer_Changes_Scope_Requires_Extension</fullName>
                <label>Customer Changes Scope &amp; Requires Extension</label>
            </value>
            <value>
                <fullName>IT_Issues</fullName>
                <label>IT Issues</label>
            </value>
            <value>
                <fullName>Procurement_Re_prioritised_Procurement_Extended</fullName>
                <label>Procurement Re-prioritised &amp; Procurement Extended</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>