force-app/main/default/objects/Procurement_Extension__c/fields/Revised_Agreed_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Agreed_Award_Date__c</fullName>
    <description>US547</description>
    <label>Revised Agreed Award Date</label>
    <type>Date</type>
</CustomField>